# githubActionsGoogleTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: googleTestCpp.yml
inc/: testClass.hpp
src/: main.cpp
tests/: CMakeLists.txt  tests.cc
